--- a/style.css
+++ b/style.css
@@ -10,139 +10,221 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  padding-top: 118px;
   height: 1900px;
 }
 
-header {
+#wrapper {
   position: fixed;
-  top: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 3;
 }
 
-@supports (position: sticky) {
-  body {
-    padding-top: 0;
-  }
-  header {
-    position: sticky;
-  }
+#access #menu a, #menu li a {
+  background-color: black;
+  height: 120px;
+  display: block;
+  color: white;
+  text-decoration: none;
+  padding: 0.5em;
+  -webkit-transition: -webkit-transform 100ms linear, box-shadow 100ms ease-in, background-color 150ms ease-in;
+  -moz-transition: -moz-transform 100ms linear, box-shadow 100ms ease-in, background-color 150ms ease-in;
+  -ms-transition: -ms-transform 100ms linear, box-shadow 100ms ease-in, background-color 150ms ease-in;
+  -o-transition: -o-transform 100ms linear, box-shadow 100ms ease-in, background-color 150ms ease-in;
+  transition: transform 10ms linear, box-shadow 100ms ease-in, background-color 150ms ease-in;
 }
 
-.navbar {
+#access a {
+  background-color: black;
+  display: block;
+  color: white;
+  text-decoration: none;
+  padding: 0.5em;
+  -webkit-transition: -webkit-transform 500ms linear, box-shadow 500ms ease-in, background-color 250ms ease-in;
+  -moz-transition: -moz-transform 500ms linear, box-shadow 500ms ease-in, background-color 250ms ease-in;
+  -ms-transition: -ms-transform 500ms linear, box-shadow 500ms ease-in, background-color 250ms ease-in;
+  -o-transition: -o-transform 500ms linear, box-shadow 500ms ease-in, background-color 250ms ease-in;
+  transition: transform 500ms linear, box-shadow 500ms ease-in, background-color 250ms ease-in;
+}
+
+#access #menu a:hover, #access a.skip-link.focus, #access #menu a.skip-link.focus, #menu li a:hover {
+  background-color: white;
+  color: black;
+}
+
+#access {
+  font-size: 1.5em;
+}
+
+#access a.skip-link, #access #menu a.skip-link {
   position: relative;
-  background-color: rgba(1, 1, 1, 0.9);
-  height: 150px;
-  width: 100%;
-  transition: 0.5s ease-in-out;
-  border-bottom: solid 9px blue;
+  z-index: 2;
 }
 
-.navbar .nav {
+#access a.skip-link span, #access #menu a.skip-link span {
+  position: absolute;
+  right: 0.5em;
+  top: 0.5em;
+  padding: 0 0.3em;
+}
+
+#menu {
+  border: 0 none;
   margin: 0;
   padding: 0;
-  display: inline-block;
-  float: right;
-  margin-right: 5%;
 }
 
-.navbar .nav .item {
-  list-style: none;
-  display: inline-block;
-  font-size: 22px;
-  padding: 25px;
-  font-weight: 300;
-  line-height: 90px;
-  margin-right: 15px;
-  transition: 0.5s ease-in-out;
-  color: white;
-  text-transform: uppercase;
-  font-weight: bold;
+#menu li {
+  list-style-image: none;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  -webkit-transition: max-height 300ms linear;
+  -moz-transition: max-height 300ms linear;
+  -ms-transition: max-height 300ms linear;
+  -o-transition: max-height 300ms linear;
+  transition: max-height 300ms linear;
 }
 
-.navbar .nav .item a {
-  text-decoration: none;
-  color: inherit;
+#menu li a {
+  white-space: nowrap;
+  overflow: hidden;
 }
 
-.navbar .logo {
-  float: left;
-  display: inline-block;
-  margin-top: 10px;
-  margin-left: 15%;
-  transition: 0.5s ease-in-out;
-}
-
-.navbar .logo img {
-  height: 120px;
-}
-
-.scrolled {
-  transition: 0.5s ease-in-out;
-}
-
-.scrolled.navbar {
-  height: 80px;
-  background-color: rgba(1, 1, 1, 0.8);
-  transition: 0.5s ease-in-out;
-  border-bottom: solid 5px blue;
-
-}
-
-.scrolled.navbar .nav .item {
-  line-height: 25px;
-  transition: 0.5s ease-in-out;
-}
-
-
-.scrolled.navbar .logo {
-  float: left;
-  display: inline-block;
-  transition: 0.5s ease-in-out;
-}
-
-.scrolled.navbar .logo img {
-  height: 70px;
-  transition: 0.5s ease-in-out;
-
-}
-
-
-
-
-
-
-
-
-
-
-
-.banniere {
-  height: 698px;
+#ban {
   width: 100%;
-  background-image: url(./img/ban.png);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: inherit;
-  background-size: contain;
+  position: relative;
+  margin-top: 120px;
+
 }
 
-.banniere-gauche {
-  height: 100%;
-  width: 50%;
-  position: relative;
-  background-color: rgba(1, 1, 1, 0.6);
+ #ban img {
+   width: 100%;
+
+ }
+
+
+#ban-dessus {
+  margin-left: 15%;
+  font-size: 35px;
+  padding: 0.9em;
+  width: 70%;
+  background-color: rgba(0,0,0,0.8);
   color: white;
   text-align: center;
+  position: absolute;
+  left: 0;
+  top: 100px;
 }
 
-.banniere-gauche h1 {
-  font-size: 45px;
-  margin-bottom: 0;
-  padding-top: 5%;
+@media only screen and (max-width: 1100px) {
+  #menu {
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    -o-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transition: margin 300ms linear;
+    -moz-transition: margin 300ms linear;
+    -ms-transition: margin 300ms linear;
+    -o-transition: margin 300ms linear;
+    transition: margin 300ms linear;
+    margin-top: -1.2em;
+    overflow: hidden;
+  }
+  #menu li {
+    max-height: 0;
+    position: relative;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    -o-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-perspective: 1000px;
+    -moz-perspective: 1000px;
+    -ms-perspective: 1000px;
+    -o-perspective: 1000px;
+    perspective: 1000px;
+  }
+  #menu li a {
+    -webkit-transform-origin: top 50%;
+    -moz-transform-origin: top 50%;
+    -ms-transform-origin: top 50%;
+    -o-transform-origin: top 50%;
+    transform-origin: top 50%;
+    position: relative;
+    overflow: hidden;
+    background-color: black;
+  }
+  #menu li.active a:before, #menu li a:hover:before {
+    opacity: 1;
+  }
+  #menu li a:hover:before {
+    color: black;
+  }
+  #menu li.active a:before, #menu li.active a:hover:before {
+    color: #fff;
+  }
+  #menu:target, #menu.target {
+    margin-top: 0;
+  }
+  #menu:target li, #menu.target li {
+    max-height: 2.5em;
+    height: auto;
+  }
+  #menu:target li a, #menu.target li a {
+    -webkit-transform: rotateX(0) scale(1);
+    -moz-transform: rotateX(0) scale(1);
+    -ms-transform: rotateX(0) scale(1);
+    -o-transform: rotateX(0) scale(1);
+    transform: rotateX(0) scale(1);
+  }
+  #ban-dessus {
+    top: 220px;
+    font-size: 15px;
+    width: 90%;
+    margin-left: 5%;
+    background-color: rgba(0,0,0,1);
+    border: solid 1px white;
+
+  }
+
+  #ban {
+
+    margin-top: 50px;
+
+  }
+
+  #ban img {
+    width: 100%;
+
+  }
 }
 
-hr {
-  width: 40%;
+@media only screen and (min-width: 1100px) {
+  #access a.skip-link {
+    display: none;
+  }
+  #menu {
+    width: 100%;
+    background: black;
+
+  }
+  #menu li {
+    display: -moz-inline-box;
+    -moz-box-orient: vertical;
+    display: inline-block;
+    vertical-align: middle;
+    *vertical-align: auto;
+    white-space: nowrap;
+  }
+  #menu li {
+    *display: inline;
+  }
+  #menu li a {
+    font-size: 39px;
+    line-height: 70px;
+  }
+
+}
+
 }
