--- a/style.css
+++ b/style.css
@@ -1,230 +1,389 @@
 * {
-  box-sizing: border-box;
-  font-family: 'Oswald', sans-serif;
+    box-sizing: border-box;
+    font-family: 'Oswald', sans-serif;
 }
 
 body {
-  position: absolute;
-  background-color: black;
-  top: 0;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 1900px;
+    position: absolute;
+    background-color: black;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 1900px;
+    z-index: 1;
 }
 
 #wrapper {
-  position: fixed;
-  width: 100%;
-  z-index: 3;
-}
-
-#access #menu a, #menu li a {
-  background-color: black;
-  height: 120px;
-  display: block;
-  color: white;
-  text-decoration: none;
-  padding: 0.5em;
-  -webkit-transition: -webkit-transform 100ms linear, box-shadow 100ms ease-in, background-color 150ms ease-in;
-  -moz-transition: -moz-transform 100ms linear, box-shadow 100ms ease-in, background-color 150ms ease-in;
-  -ms-transition: -ms-transform 100ms linear, box-shadow 100ms ease-in, background-color 150ms ease-in;
-  -o-transition: -o-transform 100ms linear, box-shadow 100ms ease-in, background-color 150ms ease-in;
-  transition: transform 10ms linear, box-shadow 100ms ease-in, background-color 150ms ease-in;
-}
-
-#access a {
-  background-color: black;
-  display: block;
-  color: white;
-  text-decoration: none;
-  padding: 0.5em;
-  -webkit-transition: -webkit-transform 500ms linear, box-shadow 500ms ease-in, background-color 250ms ease-in;
-  -moz-transition: -moz-transform 500ms linear, box-shadow 500ms ease-in, background-color 250ms ease-in;
-  -ms-transition: -ms-transform 500ms linear, box-shadow 500ms ease-in, background-color 250ms ease-in;
-  -o-transition: -o-transform 500ms linear, box-shadow 500ms ease-in, background-color 250ms ease-in;
-  transition: transform 500ms linear, box-shadow 500ms ease-in, background-color 250ms ease-in;
-}
-
-#access #menu a:hover, #access a.skip-link.focus, #access #menu a.skip-link.focus, #menu li a:hover {
-  background-color: white;
-  color: black;
+    width: 100%;
+    z-index: 5;
+    position: relative;
 }
 
 #access {
-  font-size: 1.5em;
+    border-bottom: solid 3px blue;
+    border-top: solid 3px blue;
+    background-color: black;
+}
+
+#access #menu a, #menu li a {
+    background-color: black;
+    height: 120px;
+    display: block;
+    color: white;
+    text-decoration: none;
+    padding: 0.5em;
+    -webkit-transition: -webkit-transform 100ms linear, box-shadow 100ms ease-in, background-color 150ms ease-in;
+    -moz-transition: -moz-transform 100ms linear, box-shadow 100ms ease-in, background-color 150ms ease-in;
+    -ms-transition: -ms-transform 100ms linear, box-shadow 100ms ease-in, background-color 150ms ease-in;
+    -o-transition: -o-transform 100ms linear, box-shadow 100ms ease-in, background-color 150ms ease-in;
+    transition: transform 10ms linear, box-shadow 100ms ease-in, background-color 150ms ease-in;
+}
+
+#access a {
+    background-color: black;
+    display: block;
+    color: white;
+    text-decoration: none;
+    padding: 0.5em;
+    -webkit-transition: -webkit-transform 500ms linear, box-shadow 500ms ease-in, background-color 250ms ease-in;
+    -moz-transition: -moz-transform 500ms linear, box-shadow 500ms ease-in, background-color 250ms ease-in;
+    -ms-transition: -ms-transform 500ms linear, box-shadow 500ms ease-in, background-color 250ms ease-in;
+    -o-transition: -o-transform 500ms linear, box-shadow 500ms ease-in, background-color 250ms ease-in;
+    transition: transform 500ms linear, box-shadow 500ms ease-in, background-color 250ms ease-in;
+}
+
+#access #menu a:hover, #access a.skip-link.focus, #access #menu a.skip-link.focus, #menu li a:hover {
+    background-color: #eee;
+    color: black;
+}
+
+#access {
+    font-size: 1.5em;
 }
 
 #access a.skip-link, #access #menu a.skip-link {
-  position: relative;
-  z-index: 2;
+    position: relative;
+    z-index: 2;
 }
 
 #access a.skip-link span, #access #menu a.skip-link span {
-  position: absolute;
-  right: 0.5em;
-  top: 0.5em;
-  padding: 0 0.3em;
+    position: absolute;
+    right: 0.5em;
+    top: 0.5em;
+    padding: 0 0.3em;
 }
 
 #menu {
-  border: 0 none;
-  margin: 0;
-  padding: 0;
+    border: 0 none;
+    margin: 0;
+    padding: 0;
 }
 
 #menu li {
-  list-style-image: none;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  -webkit-transition: max-height 300ms linear;
-  -moz-transition: max-height 300ms linear;
-  -ms-transition: max-height 300ms linear;
-  -o-transition: max-height 300ms linear;
-  transition: max-height 300ms linear;
+    list-style-image: none;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    -webkit-transition: max-height 300ms linear;
+    -moz-transition: max-height 300ms linear;
+    -ms-transition: max-height 300ms linear;
+    -o-transition: max-height 300ms linear;
+    transition: max-height 300ms linear;
 }
 
 #menu li a {
-  white-space: nowrap;
-  overflow: hidden;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
-#ban {
-  width: 100%;
-  position: relative;
-  margin-top: 120px;
-
+#carousel {
+    height : 500px;
 }
-
- #ban img {
-   width: 100%;
-
- }
-
-
-#ban-dessus {
-  margin-left: 15%;
-  font-size: 35px;
-  padding: 0.9em;
-  width: 70%;
-  background-color: rgba(0,0,0,0.8);
-  color: white;
-  text-align: center;
-  position: absolute;
+.carousel-fade .carousel-inner .item {
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+}
+.carousel-fade .carousel-inner .item,
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+  opacity: 0;
+  z-index: 2;
+}
+.carousel-fade .carousel-inner .active,
+.carousel-fade .carousel-inner .next.left,
+.carousel-fade .carousel-inner .prev.right {
+  opacity: 1;
+  z-index: 2;
+}
+.carousel-fade .carousel-inner .next,
+.carousel-fade .carousel-inner .prev,
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
   left: 0;
-  top: 100px;
+
 }
+.carousel-fade .carousel-control {
+  z-index: 2;
+  font-size: 140px;
+  line-height: 450px;
+  white-space: nowrap;
+  margin: 0;
+  padding: 0;
+}
+
+.carousel-indicators li{
+    z-index: 0;
+}
+
+.carousel,
+.carousel-inner,
+.carousel-inner .item {
+  height: 100%;
+}
+.item:nth-child(1) {
+    text-align: center;
+    background-image: url(./img/ban.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    padding-top: 5%;
+    color: white;
+}
+.item:nth-child(1) h1 {
+    font-size: 160px;
+    margin:0;
+}
+.item:nth-child(2) {
+    text-align: center;
+    background-image: url(./img/ban2.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    padding-top: 5%;
+    color: white;
+}
+
+.item:nth-child(2) h1 {
+    font-size: 160px;
+    margin:0;
+}
+
+.item:nth-child(3) {
+    text-align: center;
+    background-image: url(./img/ban3.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding-top: 5%;
+    color: white;
+}
+
+.item:nth-child(3) h1 {
+    font-size: 160px;
+    margin:0;
+}
+
+
+a{
+   text-decoration:none;
+   color:#fff;
+}
+
+a:hover{
+   color:#2ecc71;
+}
+
+
+.sub-main{
+  float: center;
+}
+
+/*Button Two*/
+.button-two {
+    text-align: center;
+    margin-top: 30px;
+    cursor: pointer;
+    font-size:24px;
+  border-radius: 4px;
+  background-color:white;
+  border: none;
+  padding: 15px;
+  width: 200px;
+  transition: all 0.5s;
+}
+
+
+.button-two span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button-two span:after {
+  content: '»';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button-two:hover span {
+  padding-right: 25px;
+}
+
+.button-two:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+
 
 @media only screen and (max-width: 1100px) {
-  #menu {
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    -ms-transform-style: preserve-3d;
-    -o-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    -webkit-transition: margin 300ms linear;
-    -moz-transition: margin 300ms linear;
-    -ms-transition: margin 300ms linear;
-    -o-transition: margin 300ms linear;
-    transition: margin 300ms linear;
-    margin-top: -1.2em;
-    overflow: hidden;
-  }
-  #menu li {
-    max-height: 0;
-    position: relative;
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    -ms-transform-style: preserve-3d;
-    -o-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    -webkit-perspective: 1000px;
-    -moz-perspective: 1000px;
-    -ms-perspective: 1000px;
-    -o-perspective: 1000px;
-    perspective: 1000px;
-  }
-  #menu li a {
-    -webkit-transform-origin: top 50%;
-    -moz-transform-origin: top 50%;
-    -ms-transform-origin: top 50%;
-    -o-transform-origin: top 50%;
-    transform-origin: top 50%;
-    position: relative;
-    overflow: hidden;
-    background-color: black;
-  }
-  #menu li.active a:before, #menu li a:hover:before {
-    opacity: 1;
-  }
-  #menu li a:hover:before {
-    color: black;
-  }
-  #menu li.active a:before, #menu li.active a:hover:before {
-    color: #fff;
-  }
-  #menu:target, #menu.target {
-    margin-top: 0;
-  }
-  #menu:target li, #menu.target li {
-    max-height: 2.5em;
-    height: auto;
-  }
-  #menu:target li a, #menu.target li a {
-    -webkit-transform: rotateX(0) scale(1);
-    -moz-transform: rotateX(0) scale(1);
-    -ms-transform: rotateX(0) scale(1);
-    -o-transform: rotateX(0) scale(1);
-    transform: rotateX(0) scale(1);
-  }
-  #ban-dessus {
-    top: 220px;
-    font-size: 15px;
-    width: 90%;
-    margin-left: 5%;
-    background-color: rgba(0,0,0,1);
-    border: solid 1px white;
+    #carousel {
+        height: 250px;
+    }
 
-  }
+    #carousel h1{
+     font-size: 40px;
+     margin-top: 10%;
+    }
 
-  #ban {
+    #carousel .carousel-control {
+      font-size:70px;
+      line-height: 250px;
 
-    margin-top: 50px;
+    }
 
-  }
+    .button-two {
+    font-size:18px;
+      padding: 12px;
+      width: 90px;
+      transition: all 0.5s;
+    }
 
-  #ban img {
-    width: 100%;
+    #logo-menu img {
+        width: 50%;
+        margin-left: 25%;
+        margin-top: 2%;
+    }
+    #logo-menu {
+        background-color: black;
+    }
+    #logo-nav {
+        display: none;
+    }
+    #access a {
+        border-bottom: solid 3px blue;
+    }
+    #menu {
+        -webkit-transform-style: preserve-3d;
+        -moz-transform-style: preserve-3d;
+        -ms-transform-style: preserve-3d;
+        -o-transform-style: preserve-3d;
+        transform-style: preserve-3d;
+        -webkit-transition: margin 300ms linear;
+        -moz-transition: margin 300ms linear;
+        -ms-transition: margin 300ms linear;
+        -o-transition: margin 300ms linear;
+        transition: margin 300ms linear;
+        margin-top: -1.2em;
+        overflow: hidden;
+    }
+    #menu li {
+        max-height: 0;
+        position: relative;
+        -webkit-transform-style: preserve-3d;
+        -moz-transform-style: preserve-3d;
+        -ms-transform-style: preserve-3d;
+        -o-transform-style: preserve-3d;
+        transform-style: preserve-3d;
+        -webkit-perspective: 1000px;
+        -moz-perspective: 1000px;
+        -ms-perspective: 1000px;
+        -o-perspective: 1000px;
+        perspective: 1000px;
+    }
+    #menu li a {
+        -webkit-transform-origin: top 50%;
+        -moz-transform-origin: top 50%;
+        -ms-transform-origin: top 50%;
+        -o-transform-origin: top 50%;
+        transform-origin: top 50%;
+        position: relative;
+        overflow: hidden;
+        background-color: black;
+    }
+    #menu li.active a:before, #menu li a:hover:before {
+        opacity: 1;
+    }
+    #menu li a:hover:before {
+        color: black;
+    }
+    #menu li.active a:before, #menu li.active a:hover:before {
+        color: #fff;
+    }
+    #menu:target, #menu.target {
+        margin-top: 0;
+    }
+    #menu:target li, #menu.target li {
+        max-height: 2.5em;
+        height: auto;
+    }
+    #menu:target li a, #menu.target li a {
+        -webkit-transform: rotateX(0) scale(1);
+        -moz-transform: rotateX(0) scale(1);
+        -ms-transform: rotateX(0) scale(1);
+        -o-transform: rotateX(0) scale(1);
+        transform: rotateX(0) scale(1);
+    }
 
-  }
 }
 
-@media only screen and (min-width: 1100px) {
-  #access a.skip-link {
-    display: none;
-  }
-  #menu {
-    width: 100%;
-    background: black;
-
-  }
-  #menu li {
-    display: -moz-inline-box;
-    -moz-box-orient: vertical;
-    display: inline-block;
-    vertical-align: middle;
-    *vertical-align: auto;
-    white-space: nowrap;
-  }
-  #menu li {
-    *display: inline;
-  }
-  #menu li a {
-    font-size: 39px;
-    line-height: 70px;
-  }
-
+@media only screen and (min-width: 1101px) {
+    #logo-menu {
+        display: none;
+    }
+    #access ul {
+        margin-top: 0;
+    }
+    #li-img img {
+        height: 100px;
+    }
+    #menu {
+        height: 120px;
+    }
+    #menu #li-img {
+        margin-right: 30%;
+    }
+    #access ul {
+        margin-left: 15%;
+    }
+    #access a.skip-link {
+        display: none;
+    }
+    #nav {
+        width: 100%;
+    }
+    #menu li {
+        display: -moz-inline-box;
+        -moz-box-orient: vertical;
+        display: inline-block;
+        vertical-align: middle;
+        *vertical-align: auto;
+        white-space: nowrap;
+    }
+    #menu li {
+        *display: inline;
+    }
+    #menu li a {
+        font-size: 30px;
+        line-height: 70px;
+    }
 }
 
 }
